--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,8 @@
         <section class="contact">
             <h2 id="contact">Contact</h2>
             <ul>
-                <li><i class="fa-solid fa-envelope"></i> <strong> Email :</strong> <a href="mailto:nathaliavilasse@gmail.com">nathaliavilasse@gmail.com</a></li>
+                <li><i class="fa-solid fa-envelope"></i> <strong> Email :</strong> <a href="mailto:nathaliavilasse@gmail.com">Mon mail</a></li>
+                <li><a href="Images/CV_N_VILASSE.pdf" download>Mon CV</a></li>
                 <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/in/nathalia-vilasse-208733335" target="_blank"> Mon LinkedIn</a></li>
                 <li><i class="fa-brands fa-github"></i> <a href="https://github.com/THDW04" target="_blank">Mon GitHub</a></li>
             </ul>
