--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div id="presentation">
                 <img src="Images/Profil.png" alt="Photo de profil">
                 <p> Je suis Nathalia, une étudiante en BUT Métiers du Multimédia et de l’Internet, une formation qui me permet d’explorer de domaines variés comme le design graphique, le développement web, et la production audiovisuelle. Ce portfolio rassemble des projets concrets qui reflètent mon parcours et mes compétences. En tant qu’étudiante, je suis constamment à la recherche de nouveaux défis, et ce portfolio est pour moi l’opportunité de présenter non seulement mes compétences, mais aussi ma vision personnelle des projets que je réalise. Mon objectif est de continuer à explorer des domaines comme la création de sites web interactifs, et la communication visuelle, à travers des opportunités professionnelles.</p>
+                <a href="Images/CV_N_VILASSE.pdf" download>Télécharger mon CV.</a>
             </div>
 
             <h3>Quelles sont mes compétences ?</h3>
@@ -102,7 +103,6 @@
             <h2 id="contact">Contact</h2>
             <ul>
                 <li><i class="fa-solid fa-envelope"></i> <strong> Email :</strong> <a href="mailto:nathaliavilasse@gmail.com">Mon mail</a></li>
-                <li><a href="Images/CV_N_VILASSE.pdf" download>Mon CV</a></li>
                 <li><i class="fa-brands fa-linkedin"></i> <a href="https://linkedin.com/in/nathalia-vilasse-208733335" target="_blank"> Mon LinkedIn</a></li>
                 <li><i class="fa-brands fa-github"></i> <a href="https://github.com/THDW04" target="_blank">Mon GitHub</a></li>
             </ul>
