--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div>
                 <h3>en création graphique</h3>
-                <p class="hover-area"data-image="Images/Affiche2.jpg"><a href="html/projets.html?id=4">Affiche d'information</a></p>
+                <p class="hover-area"data-image="Images/Affiche.jpg"><a href="html/projets.html?id=4">Affiche d'information</a></p>
                 <p class="hover-area" data-image="Images/Livret.jpg"><a href="html/projets.html?id=5">Livret filmique</a></p>
                 <p class="hover-area" data-image="Images/voiture.png"><a href="html/projets.html?id=6">Motion Design</a></p>
             </div>
